BUG 34974215 - Disconnect topic subscribers under a lock (merge ce/main -> ce/23.03 100028)
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v23.03/": change = 100029]